# alice

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TOOLS.md  install.sh  pyproject.toml  run.sh
.githooks/: pre-push
.github/workflows/: ci.yml
config/: alice.env.example
docs/: ARCHITECTURE.md  HAIKU-CUE-RUNNER-SPEC.md  QUICKSTART.md
docs/refactor/: 00-overview.md  01-transport-plugin-interface.md  02-speaking-module-layout.md  03-thinking-module-layout.md  04-prompts-package.md  05-personae-and-injection.md  06-provider-port.md  07-skills.md  08-alice-core-organization.md  09-spike-pi-coding-agent.md  10-pi-kernel.md
sandbox/: Dockerfile  README.md  alice.gitconfig  docker-compose.yml  entrypoint.sh
sandbox/daemon/: Dockerfile
sandbox/s6/alice-autopush/: run
sandbox/s6/signal-bridge/: finish  run
sandbox/s6/signal-daemon/: run
sandbox/viewer/: Dockerfile
sandbox/worker/: Dockerfile
signal/: signal-bridge.sh
speaking/: README.md
speaking/src/alice_core/: __init__.py  events.py  kernel.py  sdk_compat.py
speaking/src/alice_speaking/: __init__.py  compaction.py
speaking/src/alice_thinking/: wake.py
speaking/tests/: conftest.py  test_session_state.py
src/alice_core/: auth.py  config.py  events.py  kernel.py  sdk_compat.py  session.py
src/alice_core/config/: __init__.py  auth.py  cli.py  model.py  personae.py
src/alice_core/cortex_index/: CLAUDE-MD-RETRIEVAL-SECTION.md  README.md  __init__.py  build_index.py  yaml_lite.py
src/alice_core/kernel/: __init__.py  anthropic.py  factory.py  protocol.py  types.py
src/alice_indexer/: build_index.py  yaml_lite.py
src/alice_pi/: __init__.py  kernel.py  translator.py  transport.py  usage.py
src/alice_prompts/: __init__.py  cli.py  loader.py
src/alice_skills/: __init__.py  cli.py  discovery.py  registry.py  render.py  skill.py
src/alice_speaking/: __init__.py  __main__.py  _dispatch.py  _sanity.py  compaction.py  config.py  daemon.py  dedup.py  events.py  factory.py  handlers.py  outbox.py  principals.py  quiet_hours.py  quiet_queue_runner.py  render.py  session_state.py  signal_client.py  think.py  turn_log.py  turn_runner.py
src/alice_thinking/: __init__.py  __main__.py  _prompt_assembly.py  backoff.py  kernel_adapter.py  selector.py  vault_state.py  wake.py
src/alice_viewer/: __init__.py  aggregators.py  bucket_cache.py  labels.py  main.py  narrative.py  run_summary.py  settings.py  sources.py
src/alice_watchers/: __init__.py  github.py
templates/mind-scaffold/: .gitignore  CLAUDE.md  HEARTBEAT.md  HEMISPHERES.md  IDENTITY.md  MEMORY.md  USER.md  personae.yml
tests/: conftest.py  test_a2a_transport.py  test_alice_core_isolation.py  test_alice_indexer.py  test_auth.py  test_backend_cli.py  test_compaction.py  test_compaction_trigger.py  test_daemon.py  test_discord_transport.py  test_dispatch_registry.py  test_factory.py  test_gh_watcher.py  test_kernel.py  test_kernel_factory.py  test_messaging.py  test_model_config.py  test_no_hardcoded_personae_literals.py  test_outbox.py  test_personae.py  test_pi_auth_bridge.py  test_pi_kernel.py  test_pi_translator.py  test_pi_usage.py  test_principals.py  test_prompts.py  test_prompts_cli.py  test_sdk_auth_smoke.py  test_session_state.py  test_signal_attachments.py  test_signal_batching.py  test_skills.py  test_skills_render.py  test_startup_sources.py  test_thinking_backoff.py  test_thinking_modes.py  test_thinking_selector.py  test_thinking_vault_state.py  test_thinking_wake.py  test_tools_personae.py  (+2 more)
tui/: README.md  package-lock.json  package.json  tsconfig.json
tui/src/: App.tsx  index.tsx  types.ts
viewer/: pyproject.toml
viewer/src/alice_viewer/: aggregators.py
viewer/src/alice_viewer/static/: style.css
viewer/src/alice_viewer/templates/: activity.html  graph.html  interactions.html  turn_detail.html  turns.html  wakes.html
(+134 files in other folders)
