[project]
name = "alice-speaking"
version = "0.2.0"
description = "Alice's agentic kernel + speaking + thinking hemispheres."
authors = [
    { name = "jcronq", email = "jcronq@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.66",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The project is a monorepo with two sibling Python packages under src/.
# alice_core is the agentic kernel (SDK lifecycle + observability + auth);
# alice_speaking is the Signal daemon that composes the kernel with producers,
# handlers, and an outbox.
[tool.hatch.build.targets.wheel]
packages = ["src/alice_core", "src/alice_speaking"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
