[project]
name = "alice"
version = "0.3.0"
description = "Alice — the machine that runs her: agentic kernel, speaking daemon, thinking wake, observability viewer."
authors = [
    { name = "jcronq", email = "jcronq@gmail.com" }
]
# Viewer needs 3.11 (uses asyncio.timeout in narrative.py + fastapi features).
# Speaking's packages target 3.10+ but python 3.13 in the container covers both.
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    # Agent kernel + hemispheres.
    "claude-agent-sdk>=0.1.66",
    "httpx>=0.28.1",
    # Per-transport markdown rendering (alice_speaking.render).
    "mistune>=3.0",
    # Address book / principals.yaml (alice_speaking.principals).
    "pyyaml>=6.0",
    # Discord transport (alice_speaking.transports.discord).
    "discord.py>=2.4",
    # Viewer.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sse-starlette>=2.0",
]

[project.scripts]
alice-viewer = "alice_viewer.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Four sibling Python packages under src/:
#   alice_core      — agentic kernel (SDK lifecycle + observability + auth)
#   alice_speaking  — Signal daemon (composes kernel with producers/handlers/outbox)
#   alice_thinking  — one-shot wake (python -m alice_thinking)
#   alice_viewer    — FastAPI observability UI (serves /state logs)
[tool.hatch.build.targets.wheel]
packages = [
    "src/alice_core",
    "src/alice_speaking",
    "src/alice_thinking",
    "src/alice_viewer",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
