[project]
name = "alice-viewer"
version = "0.1.0"
description = "Observability UI for Alice's two hemispheres."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sse-starlette>=2.0",
    "claude-agent-sdk>=0.1.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alice_viewer"]

[project.scripts]
alice-viewer = "alice_viewer.main:run"
